Implemented GET /topics/{identifier}/occurrences endpoint and fixed several bugs with storing BLOB fields.
